--- a/src/style/chin.css
+++ b/src/style/chin.css
@@ -1,9 +1,24 @@
-/* Support rendering content inside the "chin" on Android Chrome. This draws the
+/**
+ * Support rendering content inside the "chin" on Android Chrome. This draws the
  * gesture bar over the top of the viewport, rather than creating a smaller
  * viewport that sits above the chin.
  *
  * https://developer.chrome.com/docs/css-ui/edge-to-edge
+ *
+ * https://webkit.org/blog/7929/designing-websites-for-iphone-x/
  */
 body {
-  padding-bottom: env(safe-area-max-inset-bottom, 0px);
+  padding-top: max(env(safe-area-max-inset-top, 0px), env(safe-area-inset-top));
+  padding-bottom: max(
+    env(safe-area-max-inset-bottom, 0px),
+    env(safe-area-inset-bottom)
+  );
+  padding-left: max(
+    env(safe-area-max-inset-left, 0px),
+    env(safe-area-inset-left)
+  );
+  padding-right: max(
+    env(safe-area-max-inset-right, 0px),
+    env(safe-area-inset-right)
+  );
 }
